src/test/deca/context/invalid/SansObjet/DeclVar-EQ-int-boolean-string.deca
// Description:
//    Declaration of a int variable using == operation between a boolean variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    string y = "Hello"; 
    int z = false == "Hello"; 
}
